# wave-metrics

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
population_data/: README.md  load_population_cdfs.sh  pipeline.bqsql  validations.bqsql
population_data/output/: population_cdfs.csv
services/: README.md  alembic.ini
services/api/: Dockerfile  README.md
services/api/app/: __init__.py  main.py  schemas.py  (+1 more)
services/scheduler/: Dockerfile  README.md  __init__.py
services/shared/: README.md  __init__.py  caching.py  celery_config.py  config.py  database.py  diagnostics.md  diagnostics.py  github_client.py  locks.py  login_aliases.py  materialized_views.sql  metric_computations.py  metric_definitions.py  percentiles.py  pipeline.py  schema.sql  throttle.py  token_store.py  token_vault.py  users.py
services/worker/: Dockerfile  README.md  __init__.py
tests/: README.md  conftest.py  test_api_schemas.py  test_baseline_resolution.py  test_config_validation.py  test_derive_terminal_job_fields.py  test_e2e_real_sync.py  test_github_client_graphql_retry.py  test_jobs_endpoint.py  test_metric_computations.py  test_metrics_cache.py  test_percentiles.py  test_pipeline_ingest_and_compute_integration.py  test_pipeline_lru_cache.py  test_pipeline_user_lock.py  test_pipeline_window_resolution.py  test_scheduler_utils.py  test_throttle_semaphore.py  test_token_store.py  test_token_vault.py  test_user_lock.py  test_user_needs_recompute.py  test_worker_skipped_job_status.py  test_worker_task_wrapper.py  test_worker_vault_tasks.py
(+12 files in other folders)
